syntax = "proto3";

option csharp_namespace = "Communications";

service IotService {
	rpc GetIotHubInfo (IotHubInfoRequest) returns (IotHubInfoResponse);
}

message IotHubInfoRequest {}

message IotHubInfoResponse {
	string hostName = 1;
}